codigo/7-bucles/error_continue.out
  File "<stdin>", line 1
    continue
    ^
SyntaxError: 'continue' not properly in loop